kubernetes/apps/network/traefik/addons/external-apps/http-route-private.yml
# https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-apps-private
spec:
  parentRefs:
    - name: traefik-private-default
  hostnames:
    - "*.${SECRET_PRIVATE_DOMAIN}"
  rules:
    - matches:
        - headers:
          - name: 'Host'
            value: hass.${SECRET_PRIVATE_DOMAIN}
      backendRefs:
        - name: home-assistant
          port: 80
