kubernetes/apps/network/traefik/addons/external-apps/http-route-public.yml
# https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-apps-public
spec:
  parentRefs:
    - name: traefik-public-default
      port: 443
  hostnames:
    - "*.${SECRET_PUBLIC_DOMAIN1}"
  rules:
    - matches:
        - headers:
          - name: 'Host'
            value: hass.${SECRET_PUBLIC_DOMAIN1}
      backendRefs:
        - name: home-assistant
          port: 80
